--- a/fixora_server/manage_service/templates/manage_service/customer_home.html
+++ b/fixora_server/manage_service/templates/manage_service/customer_home.html
@@ -208,8 +208,13 @@
 
                     <div class="p-5 flex flex-col flex-grow">
                         <h3 class="font-bold text-brand-dark text-lg mb-1">{{ category.name }}</h3>
-                        <p class="text-gray-400 text-xs mb-4 line-clamp-2">Expert {{ category.name }} services at your
-                            doorstep. Verified professionals.</p>
+                        <p class="text-gray-400 text-xs mb-4 line-clamp-2">
+                            {% if category.description %}
+                            {{ category.description }}
+                            {% else %}
+                            Trusted {{ category.name }} services delivered by verified professionals.
+                            {% endif %}
+                        </p>
 
                         <div class="mt-auto pt-4 border-t border-gray-50 flex items-center justify-between">
                             <span class="text-xs font-bold text-gray-400">From <span
