[FIX] add_category

--- a/fixora_server/manage_service/templates/manage_service/add_category.html
+++ b/fixora_server/manage_service/templates/manage_service/add_category.html
@@ -88,7 +88,7 @@
     </style>
 </head>
 
-<body class="h-screen w-full flex items-center justify-center overflow-hidden relative">
+<body class="min-h-screen w-full flex items-center justify-center overflow-x-hidden relative py-10"></body>
 
     <div class="absolute inset-0 bg-grid-pattern pointer-events-none z-0"></div>
 
