[FEAT] view logic to filter available providers by categorywith sample FrontEnd

--- a/fixora_server/manage_service/templates/manage_service/customer_home.html
+++ b/fixora_server/manage_service/templates/manage_service/customer_home.html
@@ -251,7 +251,7 @@
                                 </div>
 
                             </div>
-                            <a href="/services/?category={{ category.id }}"
+                            <a href="{% url 'service_view' %}?category={{ category.id }}"
                                 class="bg-brand-surface text-brand-action w-8 h-8 rounded-full flex items-center justify-center hover:bg-brand-action hover:text-white transition-colors tap-effect">
                                 <i class="fa-solid fa-plus"></i>
                             </a>
